--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@socket.io/redis-adapter": "^7.1.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
+    "ioredis": "^5.6.1",
     "moment": "^2.24.0",
     "mysql2": "^3.12.0",
     "redis": "^4.0.2",
