--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@socket.io/redis-adapter": "^7.1.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
+    "express-session": "^1.18.2",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
     "mysql2": "^3.14.0",
     "redis": "^4.0.2",
